GetThreadState returns 0 for virtual thread that has terminated

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 19
    • Affects Version/s: 19
    • Component/s: hotspot
    • b30

        JVM TI GetThreadState is specified to return a thread state of JVMTI_THREAD_STATE_TERMINATED for a thread that has terminated. When invoked with a virtual thread, this function returns a thread state of 0.

              Assignee:
              Serguei Spitsyn
              Reporter:
              Alan Bateman
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: