8288703: GetThreadState returns 0 for virtual thread that has terminated

Reviewed-by: alanb, amenkov, cjplummer